[package]
name = "dsim"
version = "0.1.0"
edition = "2021"

[dependencies]
serde =        { version = "1", features = ["derive"] }
clap =         { version = "4", features = ["derive"] }
csv =          { version = "1.3" }
#serde_json =   { version = "1" }
serde_jsonrc = { version = "0.1" }
tokio =        { version = "1", features = ["full"] }



