[package]
name = "apollon"
version = "0.1.0"
edition = "2021"

[dependencies]
serde =        { version = "1", features = ["derive"] }
clap =         { version = "4", features = ["derive"] }
csv =          { version = "1.3" }
#serde_json =   { version = "1" }
serde_jsonrc = { version = "0.1" }
tokio =        { version = "1", features = ["full"] }
num-format =   { version = "0.4" }
toml =         { version = "0.8"  }
plotters =     { version = "0.3" }

[dependencies.opencl3]
version = "0.9"
features = [
  #"cl_khr_gl_sharing", "cl_khr_dx9_media_sharing",
  "serde",
  "CL_VERSION_2_1", "CL_VERSION_2_2", "CL_VERSION_3_0"
]
